syntax = "proto3";

package pb;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message Block {
    BlockHeader block_header = 1;
    bytes transactions = 2 [(gogoproto.customtype) = "Transactions"]; // transaction set
    bytes block_hash = 3 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    bytes signature = 4;
    bytes extra = 5;
}

message BlockHeader {
    uint64 number = 1;
    bytes state_root = 2 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    bytes tx_root = 3 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    bytes receipt_root = 4 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    bytes timeout_root = 5 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    bytes parent_hash = 6 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Hash"];
    int64 timestamp = 7;
    bytes version = 8;
    bytes Bloom = 9 [(gogoproto.customtype) = "github.com/meshplus/bitxhub-kit/types.Bloom"];
}